--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,8 +6,8 @@ services:
     ports:
       - 8080:80
     volumes:
-      - ./sulu/:/var/www/project
-      - ./nginx/default.conf:/etc/nginx/conf.d/default.conf
+      - ./sulu/:/var/www/project:cached
+      - ./nginx/default.conf:/etc/nginx/conf.d/default.conf:cached
     depends_on:
       - php
 
@@ -18,6 +18,7 @@ services:
         USER_ID: 1000
     container_name: sulu_php
     volumes:
+      - ~/.composer/cache:/home/sulu/.composer/cache/:cached
       - ./sulu:/var/www/project:cached
     environment:
       - DATABASE_URL=pdo-pgsql://test:test123@sulu_db/sulu?charset=UTF-8
